Closed Bug 1756233 Opened 3 years ago Closed 3 years ago

Crash [@ nsCOMPtr]

Categories

(Core :: DOM: Core & HTML, defect)

x86_64
Linux
defect

Tracking

()

VERIFIED FIXED
100 Branch
Tracking Status
firefox-esr91 --- wontfix
firefox98 --- wontfix
firefox99 --- wontfix
firefox100 --- verified

People

(Reporter: jkratzer, Assigned: edgar)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression, testcase, Whiteboard: [bugmon:bisected,confirmed])

Crash Data

Attachments

(2 files)

Testcase found while fuzzing mozilla-central rev 6938c3b26d14 (built with: --enable-debug --enable-fuzzing).

Testcase can be reproduced using the following commands:

$ pip install fuzzfetch grizzly-framework
$ python -m fuzzfetch --build 6938c3b26d14 --debug --fuzzing -n firefox
$ python -m grizzly.replay ./firefox/firefox testcase.html
[@ nsCOMPtr]

    ==3865350==ERROR: UndefinedBehaviorSanitizer: SEGV on unknown address 0x000000000000 (pc 0x7f429abe6ae8 bp 0x7ffd55839760 sp 0x7ffd55839670 T3865350)
    ==3865350==The signal is caused by a READ memory access.
    ==3865350==Hint: address points to the zero page.
        #0 0x7f429abe6ae8 in nsCOMPtr /builds/worker/workspace/obj-build/dist/include/nsCOMPtr.h:525:7
        #1 0x7f429abe6ae8 in nsFocusManager::WindowHidden(mozIDOMWindowProxy*, unsigned long) /dom/base/nsFocusManager.cpp:1074:47
        #2 0x7f429a82a534 in nsGlobalWindowInner::PageHidden() /dom/base/nsGlobalWindowInner.cpp:4541:9
        #3 0x7f429dcb05fa in nsDocumentViewer::PageHide(bool) /layout/base/nsDocumentViewer.cpp:1394:23
        #4 0x7f429f2cbd34 in nsDocShell::FirePageHideNotificationInternal(bool, bool) /docshell/base/nsDocShell.cpp:1235:20
        #5 0x7f429f2c2870 in FirePageHideNotification /docshell/base/nsDocShell.cpp:1219:3
        #6 0x7f429f2c2870 in nsDocShell::CreateContentViewer(nsTSubstring<char> const&, nsIRequest*, nsIStreamListener**) /docshell/base/nsDocShell.cpp:7830:3
        #7 0x7f429f2c1f88 in nsDSURIContentListener::DoContent(nsTSubstring<char> const&, bool, nsIRequest*, nsIStreamListener**, bool*) /docshell/base/nsDSURIContentListener.cpp:168:20
        #8 0x7f429a00a6e7 in nsDocumentOpenInfo::TryContentListener(nsIURIContentListener*, nsIChannel*) /uriloader/base/nsURILoader.cpp:632:18
        #9 0x7f429a009520 in nsDocumentOpenInfo::DispatchContent(nsIRequest*) /uriloader/base/nsURILoader.cpp:311:9
        #10 0x7f429a0089db in nsDocumentOpenInfo::OnStartRequest(nsIRequest*) /uriloader/base/nsURILoader.cpp:155:8
        #11 0x7f4299261914 in mozilla::net::HttpChannelChild::DoOnStartRequest(nsIRequest*) /netwerk/protocol/http/HttpChannelChild.cpp:567:20
        #12 0x7f42992613f3 in mozilla::net::HttpChannelChild::OnStartRequest(mozilla::net::nsHttpResponseHead const&, bool const&, mozilla::net::nsHttpHeaderArray const&, mozilla::net::HttpChannelOnStartRequestArgs const&) /netwerk/protocol/http/HttpChannelChild.cpp:499:3
        #13 0x7f429944a46b in mozilla::net::ChannelEventQueue::FlushQueue() /netwerk/ipc/ChannelEventQueue.cpp:94:12
        #14 0x7f429947f4ac in MaybeFlushQueue /builds/worker/workspace/obj-build/dist/include/mozilla/net/ChannelEventQueue.h:335:5
        #15 0x7f429947f4ac in CompleteResume /builds/worker/workspace/obj-build/dist/include/mozilla/net/ChannelEventQueue.h:314:5
        #16 0x7f429947f4ac in mozilla::net::ChannelEventQueue::ResumeInternal()::CompleteResumeRunnable::Run() /netwerk/ipc/ChannelEventQueue.cpp:152:17
        #17 0x7f4298b8a2ce in mozilla::RunnableTask::Run() /xpcom/threads/TaskController.cpp:467:16
        #18 0x7f4298b634f6 in mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) /xpcom/threads/TaskController.cpp:770:26
        #19 0x7f4298b621b8 in mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) /xpcom/threads/TaskController.cpp:606:15
        #20 0x7f4298b62433 in mozilla::TaskController::ProcessPendingMTTask(bool) /xpcom/threads/TaskController.cpp:390:36
        #21 0x7f4298b8d7e9 in operator() /xpcom/threads/TaskController.cpp:127:37
        #22 0x7f4298b8d7e9 in mozilla::detail::RunnableFunction<mozilla::TaskController::InitializeInternal()::$_1>::Run() /builds/worker/workspace/obj-build/dist/include/nsThreadUtils.h:531:5
        #23 0x7f4298b78443 in nsThread::ProcessNextEvent(bool, bool*) /xpcom/threads/nsThread.cpp:1171:16
        #24 0x7f4298b7f95a in NS_ProcessNextEvent(nsIThread*, bool) /xpcom/threads/nsThreadUtils.cpp:467:10
        #25 0x7f429962c054 in mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) /ipc/glue/MessagePump.cpp:107:5
        #26 0x7f4299549167 in MessageLoop::RunInternal() /ipc/chromium/src/base/message_loop.cc:331:10
        #27 0x7f4299549072 in RunHandler /ipc/chromium/src/base/message_loop.cc:324:3
        #28 0x7f4299549072 in MessageLoop::Run() /ipc/chromium/src/base/message_loop.cc:306:3
        #29 0x7f429d90a388 in nsBaseAppShell::Run() /widget/nsBaseAppShell.cpp:137:27
        #30 0x7f429f97eb63 in XRE_RunAppShell() /toolkit/xre/nsEmbedFunctions.cpp:878:20
        #31 0x7f429962cf9a in mozilla::ipc::MessagePumpForChildProcess::Run(base::MessagePump::Delegate*) /ipc/glue/MessagePump.cpp:235:9
        #32 0x7f4299549167 in MessageLoop::RunInternal() /ipc/chromium/src/base/message_loop.cc:331:10
        #33 0x7f4299549072 in RunHandler /ipc/chromium/src/base/message_loop.cc:324:3
        #34 0x7f4299549072 in MessageLoop::Run() /ipc/chromium/src/base/message_loop.cc:306:3
        #35 0x7f429f97e19c in XRE_InitChildProcess(int, char**, XREChildData const*) /toolkit/xre/nsEmbedFunctions.cpp:715:34
        #36 0x55db9b9bfd37 in content_process_main /browser/app/../../ipc/contentproc/plugin-container.cpp:57:28
        #37 0x55db9b9bfd37 in main /browser/app/nsBrowserApp.cpp:327:18
        #38 0x7f42adaa50b2 in __libc_start_main /build/glibc-eX1tMB/glibc-2.31/csu/../csu/libc-start.c:308:16
        #39 0x55db9b99b4bc in _start (/home/jkratzer/builds/mc-debug/firefox-bin+0x154bc)
    
    UndefinedBehaviorSanitizer can not provide additional info.
    SUMMARY: UndefinedBehaviorSanitizer: SEGV /builds/worker/workspace/obj-build/dist/include/nsCOMPtr.h:525:7 in nsCOMPtr
    ==3865350==ABORTING
Attached file Testcase

Bugmon Analysis
Verified bug as reproducible on mozilla-central 20220220215821-d8719ea92f14.
The bug appears to have been introduced in the following build range:

Start: 1ad746378bd946d1ff7828b69e8d991d3551af9d (20210222102113)
End: 75fc5173b72d4cbf4f310a2c96d44e5ca8446363 (20210222125014)
Pushlog: https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=1ad746378bd946d1ff7828b69e8d991d3551af9d&tochange=75fc5173b72d4cbf4f310a2c96d44e5ca8446363

Keywords: regression
Whiteboard: [bugmon:confirm] → [bugmon:bisected,confirmed]

hsivonen: Looks like a regression of bug 1663931, could you take a look?

Flags: needinfo?(hsivonen)

Or if Edgar has bandwidth.

Flags: needinfo?(echen)
Crash Signature: [@ nsCOMPtr] → [@ nsCOMPtr] [@ nsFocusManager::WindowHidden]
Assignee: nobody → echen
Flags: needinfo?(hsivonen)
Flags: needinfo?(echen)
Regressed by: 1663931
Severity: -- → S3

Set release status flags based on info from the regressing bug 1663931

Attachment #9268500 - Attachment description: WIP: Bug 1756233 - Ensure docShellBeingHidden is not null; → Bug 1756233 - Ensure docShellBeingHidden is not null;
Pushed by echen@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/6ee65cf29009 Ensure docShellBeingHidden is not null; r=hsivonen
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 100 Branch

Bugmon Analysis
Verified bug as fixed on rev mozilla-central 20220322042758-eee8f4778c79.
Removing bugmon keyword as no further action possible. Please review the bug and re-add the keyword for further analysis.

Status: RESOLVED → VERIFIED
Keywords: bugmon
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: