Bug 1756233 - Ensure docShellBeingHidden is not null; r=hsivonen

Differential Revision: https://phabricator.services.mozilla.com/D141515